[tool.poetry]
name = "stratosphere"
version = "0.0.1"
description = "An analytics tool for your web activity."
authors = ["Michele Dallachiesa <michele.dallachiesa@sigforge.com>"]
license = "BSD-3"
readme = "README.md"
homepage = "https://stratosphere.dev"
repository = "https://github.com/elehcimd/stratosphere"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved",
    "Intended Audience :: Science/Research",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11"
pandas = "^1.4.4,<2.0"
joblib = "^1.1.1"
sqlalchemy = "^1.4.44,<2.0" 
sqlalchemy-utils = "^0.38.3"
ulid-py = "^1.1.0"
colorama = "^0.4.6"
tqdm = "^4.64.1"
tabulate = {version="^0.9.0", optional=true}
ipywidgets = {version="^8.0.2", optional=true}
psycopg2-binary = {version="^2.9.5", optional=true}
beautifulsoup4 = "^4.12.2"


[tool.poetry.extras]
pgsql = ["psycopg2-binary"]
complete = ["tabulate", "ipywidgets"]

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.0"
flake8 = "^5.0.4"
pytest = "^7.2.0"
black = {extras = ["jupyter"], version = "^22.10.0"}
ruff = "^0.0.261"
pytest-cov = "^4.0.0"
pylint = "^2.15.9"
pytest-xdist = "^3.1.0"
mkdocs-material = "^8.5.11"
mdx-include = "^1.4.2"
mkdocs-macros-plugin = "^0.7.0"
mkdocstrings = {extras = ["python"], version = "^0.19.1"}
matplotlib = "^3.6.2"
anybadge = "^1.14.0"
setuptools = "^65.6.3"
certifi = "^2022.12.7"
watchdog = "^2.2.0"
fabric = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ["py37"]
preview = true

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "U", "S", "C", "B", "A", "T", "Q", "BLE", "C"] # ANN FBT
target-version = "py37"
ignore = ["A003", "S101", "T201"]


[tool.pytest.ini_options]
filterwarnings = ["ignore:RemovedIn20Warning:"]

